--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,40 +1,48 @@
-<%-include("./layout/header")%>
-
-    <div class="col-10 ">
-        <div class="table-scrollable d-flex justify-content-center align-items-center ">
-          <table class="table table-light table-striped table-boadered table-responsive m-5 ">
-            <thead>
-              <tr>
-                <th>Category Name</th>
-                <th colspan="3" >Sub Category</th>
-                <th>Edit</th>
-              </tr>
-            </thead>
-        
-            <tbody>
-              <% categories.forEach((category, i) => { %>
-                <tr>
-                  <td><%= category.name %></td>
-                  <% if (category.sub.length > 0) { %>
-                    <% category.sub.forEach((sub, j) => { %>
-                      <td><%= sub %></td>   
-                    <% }) %>
-                  <% } else { %>
-                    <td colspan="3"></td>
-                  <% } %>
-                  <td>
-                    <a href="/admin/category/edit?id=<%= category._id %>">
-                      <button type="button" style="background-color: #88C8BC;" class="btn ">Edit</button>
-                    </a>
-                  </td>
-                </tr>
-              <% }) %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      
+<%- include("./layout/header") %>
+<div class="col-10">
+  <div class="table-scrollable d-flex justify-content-center align-items-center">
+    <div class="table-responsive m-5 w-100" style="max-height: 400px; overflow-y: auto;">
+      <table class="table table-light table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Category Image</th>
+            <th>Category Name</th>
+            <th>Edit</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Category data loop -->
+          <% for (let i = 0; i < categories.length; i++) { %>
+            <tr>
+              <td>
+                <img src="<%= categories[i].image %>" height="50" width="50" alt="">
+              </td>
+              <td><%= categories[i].name %></td>
+              <td>
+                <a href="/admin/category/edit?id=<%= categories[i]._id %>">
+                  <button type="button" style="background-color: #88C8BC;" class="btn">Edit</button>
+                </a>
+              </td>
+              <td>
+                <button type="button" onclick="redirectToPage('<%= categories[i]._id %>')" <% if (productValue[i]) { %>disabled<% } %> class="btn btn-danger">
+                  <% if (productValue[i]) { %>Can not Delete <% } else { %>Delete<% } %>
+                </button>
+              </td>
+            </tr>
+            <script>
+              function redirectToPage(categoryId) {
+                // Redirect to a specific page with the category ID
+                window.location.href = `/admin/category/delete?id=${categoryId}`;
+              }
+            </script>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
   </div>
-</section>
+</div>
 
-<%-include("./layout/footer.ejs")%>
+
+
+<%- include("./layout/footer.ejs") %>
