--- a/views/admin/layout/footer.ejs
+++ b/views/admin/layout/footer.ejs
@@ -4,18 +4,16 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  $(document).ready(function() {
-    $("#sidebarToggle").click(function() {
-      $("#sidebar").toggleClass("active");
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('.zoom').elevateZoom({
+         zoomWindowWidth: 200, 
+         zoomWindowHeight: 200
+          });
     });
-    $(window).resize(function() {
-      if ($(window).width() > 991) {
-        $("#sidebar").removeClass("active");
-      }
-    });
-  });
-</script>
+  </script>
 </body>
 
 </html>
