--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -5,8 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SolMate</title>
+  <!-- font awesome -->
   <script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
+  <!-- bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+
+
   <style>
     .nav-pills li a:hover {
       background-color: #f2c30a;
@@ -21,6 +28,7 @@
     }
     #sidebar {
       transition: transform 0.3s ease-in-out;
+      height: 87vh;
     }
     #sidebar.active {
       transform: translateX(-100%);
@@ -31,9 +39,9 @@
 <body style="background: #bccd9e;">
   <div class="bg-light">
     <div class="d-flex">
-      <div class="col-2 bg-light d-flex justify-content-center custom-heading align-items-center py-5 px-5">
-        <a class="navbar-brand fs-3 " href="#">SolMate</a>
-      </div>
+      <div class="col-2 bg-light d-flex justify-content-center custom-heading align-items-center">
+        <a class="navbar-brand " style="font-size: 1.5vw;" href="#">SolMate</a>
+      </div>      
       <div class="col-10" style="background-color:#88C8BC;">
         <nav class="navbar navbar-expand-lg navbar-light container">
           <div class="container-fluid">
@@ -49,11 +57,9 @@
                   <a class="nav-link" href="#">Admin</a>
                 </li>
                 <li class="nav-item">
-                  <button class="btn btn-dark text-light" href="/admin/logout" >
-                    <a class="btn btn-dark text-light" href="/admin/logout">
-                      Logout
-                    </a>                  
-                  </button>          
+                  <a class="btn btn-dark text-light" href="/admin/logout">
+                    Logout
+                  </a>                  
                 </li>
               </ul>
             </div>
@@ -64,10 +70,10 @@
   </div>
 
   <section>
-    <div class="d-flex">
+    <div class="d-flex shadow-lg">
       <div class="col-2">
-        <div class="d-flex flex-column justify-content-between bg-light min-vh-100" id="sidebar">
-          <div class=" container">
+        <div class="d-flex flex-column justify-content-between bg-light " id="sidebar">
+          <div class=" container col-auto bg-light col-12 overflow-auto">
             <ul class="nav nav-pills flex-column mt-2 mt-sm-0" id="menu">
               <li class="nav-item my-sm-1 my-2">
                 <a href="/admin/dashboard" class="nav-link text-dark text-center text-sm-start" aria-current="page">
@@ -109,7 +115,7 @@
               </li>
               <hr class="text-dark d-none d-sm-block my-3" />
               <li class="nav-item my-sm-1 my-2">
-                <a href="#" class="nav-link text-dark text-center text-sm-start" aria-current="page">
+                <a href="/admin/order" class="nav-link text-dark text-center text-sm-start" aria-current="page">
                   <i class="fa fa-truck-fast"></i>
                   <span class="ms-2 d-none d-sm-inline">Orders</span>
                 </a>
@@ -135,6 +141,3 @@
         </div>
       </div>
       <div class="col-10">
-
-      
-    
