--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -1,45 +1,115 @@
-<%-include("./layout/header")%>
+<%- include("./layout/header") %>
 
-    <div class="col-9 mx-5">
-      
-
-
-
-        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 mb-5 w-100">
-          <% for(let i=0;i<stock.length;i++){%>
-
-          <div class="col w-25">
-            <div class="card">
-              <img
-                src="<%=stock[i].image[0]%>"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body d-flex flex-column align-items-center">
-                <h5 class="card-title fs-6"><%=stock[i].name%></h5>
-                <h5 class="card-title fs-6"><%=stock[i].price%></h5>
-                <div>
-                  <a
-                    href="/admin/product/edit?id=<%=stock[i]._id %>"
-                    style="font-size: 0.5rem"
-                    class="btn btn-outline-success"
-                    >edit</a
-                  >
-                  <a
-                    href="/admin/product/delete?id=<%=stock[i]._id %>"
-                    style="font-size: 0.5rem"
-                    class="btn btn-outline-success"
-                    >edit</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <%}%>
-        </div>
+<div class="container-fluid">
+  <!-- <div class="input-group mt-5 mb-5">
+    <input type="search" name="search" class="form-control" placeholder="Search">
+    <button type="submit" class="btn btn-dark">Search</button>
+  </div> -->
+  <div class="card shadow mt-5 my-0">
+    <div class="card-body">
+      <h5 class="card-title fw-semibold mb-4">PRODUCTS</h5>
+      <div class="table-responsive">
+        <p class="text-secondary">List of Products</p>
+        <hr>
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Image</th>
+              <th scope="col">Name</th>
+              <th scope="col">Category</th>
+              <th scope="col">Price</th>
+              <th scope="col">Quantity</th>
+              <th scope="col">Edit</th>
+              <th scope="col">Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% for (let i = startIndex; i < endIndex && i < stock.length; i++) { %>
+              <tr>
+                <td class="align-middle"><%= i + 1 %></td>
+                <td class="align-middle">
+                  <img src="<%= stock[i].image[0] %>" alt="<%= stock[i].image[2] %>" class="img-fluid" style="max-height: 75px; max-width: 50px;">
+                </td>
+                <td class="align-middle"><%= stock[i].name %></td>
+                <% categories.forEach((cat) => { %>
+                  <% if (stock[i].category == cat._id) { %>
+                    <td class="align-middle"><%= cat.name %></td> 
+                  <% } %>
+                <% }) %>
+                <td class="align-middle"><%= stock[i].price %></td>
+                <td class="align-middle"><%= stock[i].stock %></td>
+                <td class="align-middle">
+                  <a href="/admin/product/edit?id=<%= stock[i]._id %>" class="btn btn-outline-success">Edit</a>
+                </td>
+                <td class="align-middle">
+                  <a href="/admin/product/delete?id=<%= stock[i]._id %>&active=<%= stock[i].isActive %>" class="btn btn-outline-danger"><% if (stock[i].isActive) { %>Delete<% } else { %>Undo<% } %></a>
+                </td>
+              </tr>
+            <% } %>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
-</section>
-<%-include("./layout/footer.ejs")%>
+</div>
+
+<div class="col-12 pb-1 mt-5">
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      <% if (totalPages > 1) { %>
+        <% if (currentPage > 1) { %>
+          <li class="page-item">
+            <a class="page-link" href="/admin/product?page=<%= currentPage - 1 %>">&laquo; Previous</a>
+          </li>
+        <% } %>
+
+        <% let numPagesDisplayed = 5; // Number of pages to display in the pagination bar %>
+        <% let startPage = Math.max(1, currentPage - Math.floor(numPagesDisplayed / 2)); %>
+        <% let endPage = Math.min(startPage + numPagesDisplayed - 1, totalPages); %>
+
+        <% if (startPage > 1) { %>
+          <li class="page-item">
+            <a class="page-link" href="/admin/product?page=1">1</a>
+          </li>
+          <% if (startPage > 2) { %>
+            <li class="page-item disabled">
+              <a class="page-link">...</a>
+            </li>
+          <% } %>
+        <% } %>
+
+        <% for (let i = startPage; i <= endPage; i++) { %>
+          <% if (i === currentPage) { %>
+            <li class="page-item active">
+              <a class="page-link" href="/admin/product?page=<%= i %>"><%= i %></a>
+            </li>
+          <% } else { %>
+            <li class="page-item">
+              <a class="page-link" href="/admin/product?page=<%= i %>"><%= i %></a>
+            </li>
+          <% } %>
+        <% } %>
+
+        <% if (endPage < totalPages) { %>
+          <% if (endPage < totalPages - 1) { %>
+            <li class="page-item disabled">
+              <a class="page-link">...</a>
+            </li>
+          <% } %>
+          <li class="page-item">
+            <a class="page-link" href="/admin/product?page=<%= totalPages %>"><%= totalPages %></a>
+          </li>
+        <% } %>
+
+        <% if (currentPage < totalPages) { %>
+          <li class="page-item">
+            <a class="page-link" href="/admin/product?page=<%= currentPage + 1 %>">Next &raquo;</a>
+          </li>
+        <% } %>
+      <% } %>
+    </ul>
+  </nav>
+</div>
+
+<%- include("./layout/footer.ejs") %>
