--- a/views/auth/layouts/header.ejs
+++ b/views/auth/layouts/header.ejs
@@ -16,7 +16,7 @@
             </button>
         </div> -->
         <div class="container">
-          <a class="navbar-brand logo mx-3" href="/">SolMate</a>
+          <a class="navbar-brand logo mx-3 text-secondary" href="/user">SolMate</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,11 +24,11 @@
 
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
+            <!-- <a class="navbar-brand mt-2 mt-lg-0" href="#">
               Signup
-            </a>
+            </a> -->
             <!-- Left links -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
               </li>
@@ -37,7 +37,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">profile</a>
-              </li>
+              </li> -->
             </ul>
             <!-- Left links -->
         </div>
