--- a/views/user/layout/header.ejs
+++ b/views/user/layout/header.ejs
@@ -1,46 +1,214 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<title>Footwear - SolMate</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<!-- dropdown -->
+<!-- ajax -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
+<!-- Custom CSS -->
+<style>
+	.navbar {
+		background-color: #3fada8;
+		height: 60px; /* Decrease the height to 60px */
+	}
+
+	.navbar-brand {
+		font-size: 24px;
+		font-weight: bold;
+	}
+
+	.navbar-nav {
+		flex-direction: column;
+		margin-top: 10px;
+	}
+
+	.navbar-nav .nav-link {
+		color: #ffffff;
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
+
+	.navbar-nav .nav-link.small {
+		font-size: 14px;
+	}
+
+	.navbar-nav .nav-link:hover {
+		color: #f8f9fa;
+	}
+
+	.navbar-toggler-icon {
+		background-color: #ffffff;
+	}
+
+	.navbar-toggler {
+		border-color: #ffffff;
+	}
+
+	.navbar-toggler:focus,
+	.navbar-toggler:active {
+		outline: none;
+		box-shadow: none;
+	}
+
+	.navbar .btn-primary {
+		background-color: #ffffff;
+		color: #000000;
+		border-color: #ffffff;
+		font-size: 14px;
+	}
+
+	.navbar .btn-primary:hover {
+		background-color: #f8f9fa;
+		color: #000000;
+		border-color: #f8f9fa;
+	}
+	
+	/* Additional CSS for alignment */
+	.navbar-nav .nav-link:last-child {
+		margin-top: auto;
+	}
+	
+	@media (min-width: 992px) {
+		.navbar-nav {
+			flex-direction: row;
+		}
+	}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
+.variant-btn {		/*Button Selection*/
+  padding: 10px 15px;
+  background-color: #eee;
+  border: none;
+  cursor: pointer;
+}
+
+.variant-btn.active {
+  background-color: #ccc;
+}
+.text-retro {
+	font-family: 'Courier New', monospace;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  letter-spacing: 1px;
+  display: inline-block;
+  background-color: #f9f9f9;
+  padding: 5px 10px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.combo-class {
+  font-family: 'Courier New', monospace;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  letter-spacing: 1px;
+  display: inline-block;
+  background-color: #ffddc1;
+  color: #5e5e5e;
+  padding: 5px 10px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.blurb {
+  background-color: #f8f8f8;
+  border: 1px solid #e0e0e0;
+  border-radius: 6px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.blurb h3 {
+  font-size: 24px;
+  color: #333;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.blurb p {
+  font-size: 16px;
+  color: #555;
+  line-height: 1.5;
+  margin-bottom: 0;
+}
+html, body {
+  height: 100%;
+}
+
+.footer {
+  margin-top: auto;
+}
+</style>
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- <div class="container text-secondary">
-            <a class="navbar-brand" href="/">SolMate</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon text-dark"></span>
-            </button>
-        </div> -->
-        <div class="container">
-          <a class="navbar-brand logo mx-3" href="/user/home">SolMate</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>        
+	
+<div class="colorlib-loader"></div>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-              Signup
-            </a>
-            <!-- Left links -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa-solid fa-user-hair"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">profile</a>
-              </li>
-            </ul>
-            <!-- Left links -->
-        </div>
-
-    </nav>
- 
+<div id="page">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+		<div class="container-fluid col-12 d-flex justify-content-between">
+			<a class="navbar-brand" href="/user">SolMate</a>
+			<% if (session) { %>
+				<div class="nav-item dropdown">
+					<button class="btn btn-primary dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%=name%></button>
+					<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+					  <li><a class="dropdown-item" href="">Account Details</a></li>
+					  <li><a class="dropdown-item" href="/logout">Logout</a></li>
+					</ul>
+				  </div>
+			<% } else { %>
+				<a href="/login" class="nav-link">
+					<button class="btn btn-primary">Log In / Register</button>
+				</a>
+			<% } %>
+		</div>
+	</nav>
+	<nav class="col-12 navbar navbar-expand-lg navbar-dark bg-dark">
+	<div class="container-fluid">
+		<ul class="navbar-nav me-auto my-auto">
+			<li class="nav-item my-auto">
+				<a class="nav-link active" aria-current="page" href="/user">Home</a>
+			</li>
+			<li class="nav-item dropdown my-auto">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Men</a>
+				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<li><a class="dropdown-item" href="product-detail.html">Product Detail</a></li>
+					<li><a class="dropdown-item" href="cart.html">Shopping Cart</a></li>
+					<li><a class="dropdown-item" href="checkout.html">Checkout</a></li>
+					<li><a class="dropdown-item" href="order-complete.html">Order Complete</a></li>
+					<li><a class="dropdown-item" href="add-to-wishlist.html">Wishlist</a></li>
+				</ul>
+			</li>
+			<li class="nav-item my-auto">
+				<a class="nav-link small" href="women.html">Women</a>
+			</li>
+			<li class="nav-item my-auto">
+				<a class="nav-link small" href="about.html">About</a>
+			</li>
+			<li class="nav-item my-auto">
+				<a class="nav-link small" href="contact.html">Contact</a>
+			</li>
+		</ul>
+		<ul class="navbar-nav">
+			<li class="nav-item cart my-auto">
+				<a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> Cart [0]</a>
+			</li>
+		</ul>
+	</div>
+</nav>
