--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -15,7 +15,8 @@
                     </div>
             </div> -->
         </div>
-        <%products.forEach(item=>{%>
+   
+        <%products.forEach(item=>{%> 
         
           <div class="col-lg-3 col-md-3 col-sm-4 pb-1 ">
             <div class="card product-item border-0 h-80 m-5">
@@ -35,9 +36,10 @@
             </div>
         </div>
         <%})%>
-        
+  
     </div>
-</div>
+
+  
 <!-- Shop Product End -->
 </div>
 </div>
@@ -46,3 +48,4 @@
 <script>
 </script>
 
+<%- include("./layout/footer.ejs") %>
