--- a/views/user/layout/header.ejs
+++ b/views/user/layout/header.ejs
@@ -158,6 +158,12 @@ html, body {
 .footer {
   margin-top: auto;
 }
+@media (max-width: 768px) {
+      /* Adjustments for smaller screens */
+      .card {
+        margin-top: 20px;
+      }
+    }
 </style>
 
 </head>
