--- a/views/admin/editOrders.ejs
+++ b/views/admin/editOrders.ejs
@@ -37,18 +37,19 @@
                             <div class="card card-stepper text-black  col-lg-4 col-md-6 ml-auto mt-1" style="border-radius: 16px;">
                                 <div class="card-body pt-5 pl-5">
                                     <h5 style="display: inline;">Status:</h5>
-                                    <a id="orderStatus" class="btn btn-small rounded-pill py-0 <%if(order.order_status== "pending"){%> btn-warning<%}else
+                                    <a class="btn btn-small rounded-pill py-0 <%if(order.order_status== "pending"){%> btn-warning<%}else
                                             if(order.order_status=="shipped" ){%>btn-secondary<%}else if(order.order_status=="pay" ){%>
                                                 btn-light<%}else if(order.order_status=="delivered" ){%>btn-success<%}else{%>btn-danger
-                                                        <%}%>" ><small>
+                                                        <%}%>" id="orderStatus"><small>
                                                                 <%=order.order_status%>
                                                             </small></a>
-                                    <%if(order.order_status=="pending"){%>
+                                    <%if(order.order_status != "rejected" && order.order_status != "cancelled" && order.order_status != "delivered"){%>
                                         <br>
                                         <select class="form-select col-8 mt-2" id="status-select">
-                                            <option selected>None</option>
-                                            <option value="shipped">Shipped</option>
-                                            <option value="rejected">Reject</option>
+                                            <option <% if(order.order_status === "pending") { %> selected <% } %> value="pending"> Pending</option>
+                                            <option <% if(order.order_status === "rejected") { %> selected <% } %> value="rejected"> Reject</option>
+                                            <option <% if(order.order_status === "shipped") { %> selected <% } %> value="shipped"> Shipped</option>
+                                            <option <% if(order.order_status === "delivered") { %> selected <% } %> value="delivered"> Delivered</option>
                                         </select>
                                         <%}%>
                                 </div>
